Name:                GtkTV
Version:             0.2.1
Cabal-Version:       >= 1.6
Synopsis:            Gtk-based GUIs for Tangible Values
Category:            User Interfaces
Description:
  GtkTV is a very small library that extends the TV (tangible value)
  framework with graphical user interfaces, using gtk2hs.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Homepage:            https://github.com/conal/GtkTV
Copyright:           (c) 2009-2014 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple
extra-source-files:
                     src/test.hs

source-repository head
  type:     git
  location: git://github.com/conal/GtkTV

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5, time, gtk, TypeCompose>=0.9.1, TV, vector-space
                     -- , OpenGL, gtkglext, bitmap, bitmap-opengl, stb-image
  Exposed-Modules:
                       Interface.TV.Gtk
                       Interface.TV.Gtk2
  ghc-options:         -Wall

-- I'll keep either Gtk or Gtk2 and drop the other (maybe renaming Gtk2 to Gtk)

-- I've moved the OpenGL functionality to the package GtkGLTV

--  ghc-prof-options:    -prof -auto-all 
